--- a/HW 1.2
+++ b/HW 1.2
@@ -1,1 +1,1 @@
-
+cat  /home/maks/etoperl/text | perl -e 'my $p;while(<>){undef$p;while("$_"<=>";"){$p=$p.$_;print $p} "$p";if (-s "/hmaks/etoperl/$p" >10 ) {print"1"}}'
