--- a/HW 1.1
+++ b/HW 1.1
@@ -1,5 +1,5 @@
 #Д/з 1.1 
-ls  /home/maks/etoperl| perl -e 'my$i=0 ; while(<>){$i++;chomp;print "$_".";";if ($i%3==0){print"\n"}}' >> /home/maks/etoperl/text
+ls  /home/maks/etoperl| perl -e 'my$i=0 ; while(<>){$i++;chomp;print "$_".";";if ($i%3==0){print"\n"}}' > /home/maks/etoperl/text
 #Вывод программы:
 ewq;gty;ke k;
 kript;next;perl;
