--- a/HW 1.2
+++ b/HW 1.2
@@ -1,7 +1,5 @@
 #Д/з 1.2 Однострочник
-cat  /home/maks/etoperl/text | perl -ne 'my $y;my $null;<MYFILE>;my @sym = split(//,$_);
-foreach my $x(@sym){$y=$y.$x;if (-s "/home/maks/etoperl/$y">1024*1024){print"\n".$y." ";$i++};
-if ($x eq";"){$y=$null}};$strok++;if ($i>0){$nado++};print"\nВсего строк ".$strok.",а нужных ".$nado; $i=0'
+cat  /home/maks/etoperl/text | perl -ne 'my $y;my $null;<MYFILE>;my @sym = split(//,$_);foreach my $x(@sym){$y=$y.$x;if (-s "/home/maks/etoperl/$y">1024*1024){print"\n".$y." ";$i++};if ($x eq";"){$y=$null}};$strok++;if ($i>0){$nado++};print"\nВсего строк ".$strok.",а нужных ".$nado; $i=0'
 # Вывод программы:
 ewq 
 Всего строк 1,а нужных 1
