--- a/HW 1.1
+++ b/HW 1.1
@@ -1,8 +1,5 @@
 #Д/з 1.1 
-ls -l /home/maks/etoperl/ | perl -e 'my$i=-1;my$y;while(<>){$i++;my @sym = split(//,$_);\
-foreach my $x(@sym){if($x eq"\n"){undef $x};if($x eq" "and $y eq""){undef $y}else{$y=$y.$x};\
-if ($x eq "0"||$x eq "1"||$x eq "2"||$x eq "3"||$x eq "4"||$x eq "5"||$x eq "6"||$x eq "7"||$x eq "8"||$x eq "9"){undef $y}};\
-if($i>0){print$y.";"};if($i%3==0 and $i>0){print"\n"}}' > /home/maks/etoperl/text
+ls -l /home/maks/etoperl/ | perl -e 'my$i=-1;my$y;while(<>){$i++;my @sym = split(//,$_);foreach my $x(@sym){if($x eq"\n"){undef $x};if($x eq" "and $y eq""){undef $y}else{$y=$y.$x};if ($x eq "0"||$x eq "1"||$x eq "2"||$x eq "3"||$x eq "4"||$x eq "5"||$x eq "6"||$x eq "7"||$x eq "8"||$x eq "9"){undef $y}};if($i>0){print$y.";"};if($i%3==0 and $i>0){print"\n"}}' > /home/maks/etoperl/text
 #Вывод программы:
 ewq;gty;ke k;
 kript;next;perl;
