--- a/HW 1.4
+++ b/HW 1.4
@@ -1,1 +1,44 @@
-
+#Запускаем скрипт через отладчик: 1)perl -d <имя файла>
+2) Вводим необходимые команды
+3) сохраняем сценарий в файл:#save <file name>
+4) выходим из отладчика и снова запускаем его
+5) вводим:#source <file name>
+#История моего отладчика:
+l
+w $i
+w $j
+w @sym
+n
+n
+n
+n
+n
+n
+n
+n
+n
+n
+n
+n
+c
+n
+n
+n
+n
+n
+n
+n
+n
+n
+n
+n
+n
+n
+n
+n
+n
+n
+n
+n
+n
+#save /home/maks/etoperl/debug_session
