--- a/HW 1.2
+++ b/HW 1.2
@@ -1,10 +1,6 @@
 #Д/з 1.2 Однострочник
-cat  /home/maks/etoperl/text | perl -ne 'my $y;my $null;<MYFILE>;my @sym = split(//,$_);foreach my $x(@sym){$y=$y.$x;if (-s "/home/maks/etoperl/$y">1024*1024){print"\n".$y." ";$i++};if ($x eq";"){$y=$null}};$strok++;if ($i>0){$nado++};print"\nВсего строк ".$strok.",а нужных ".$nado; $i=0'
+cat /home/maks/etoperl/text | perl -E 'my$j;my$f;my $y;my $n=0;my $s;while(<>){my @sym = split(//,$_);foreach my $x(@sym){if ($x eq ";"){$j++};if($j==4 and $x ne ";"){$f=$f.$x};if($j==8 and $x ne";"){$y=$y.$x};if($x eq "\n" and $f>1024*1024){print$y;$n++}};$j=0;$f="";$y="";$s++};print"Всего строк ".$s." а подходит ".$n'
 # Вывод программы:
-
-Всего строк 1,а нужных 
-ewq 
-Всего строк 2,а нужных 1
-Всего строк 3,а нужных 1
-qwe 
-Всего строк 4,а нужных 2
+4qwe
+ewq
+Всего строк 13 а подходит 2
